Complete commit stage one

--- a/app/src/main/res/layout/core_team_fragment.xml
+++ b/app/src/main/res/layout/core_team_fragment.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="5dp"
+    android:background="@drawable/b1"
     >
-
 
     <pttextview.widget.PTTextView
         android:id="@+id/pptext"
         android:padding="12dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
@@ -20,6 +21,7 @@
         app:typeface="pt_serif_bold_italic"/>
 
     <ListView
+        android:padding="5dp"
         android:layout_below="@+id/pptext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
