--- a/app/src/main/res/layout/t_shirt_fragment.xml
+++ b/app/src/main/res/layout/t_shirt_fragment.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="#dcedc8"
+    android:background="@drawable/b3"
     >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_above="@+id/slider"
+        android:background="@color/colorPrimaryDark"
+        />
     <com.daimajia.slider.library.SliderLayout
         android:id="@+id/slider"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:background="#7cb342"
-        android:layout_height="440dp"
+        android:layout_height="350dp"
         />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_below="@+id/slider"
+        android:background="@color/colorPrimaryDark"
+        />
+
 
 </RelativeLayout>
