--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,21 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main"
-    android:background="#dcedc8"
-    tools:context="com.justmailtoavi.avinashk.utopia.MainActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
+    android:background="@drawable/b2"
+    tools:context=".MainComponents.MainActivity"
     >
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_above="@+id/mainActivitySlider"
+        android:background="@color/colorPrimaryDark"
+        />
     <com.daimajia.slider.library.SliderLayout
-        android:layout_marginTop="40dp"
+        android:layout_centerInParent="true"
         android:id="@+id/mainActivitySlider"
         android:layout_width="match_parent"
         android:background="#7cb342"
-        android:layout_height="400dp"
+        android:layout_height="350dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:layout_below="@+id/mainActivitySlider"
         />
 
 </RelativeLayout>
