--- a/app/src/main/res/layout/events_list_fragment.xml
+++ b/app/src/main/res/layout/events_list_fragment.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+
+    >
 
     <pttextview.widget.PTTextView
         android:id="@+id/ccText"
         android:padding="12dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="30dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
