--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,6 +5,11 @@
         android:id="@+id/topPanel"
         android:checkableBehavior="single">
         <item
+            android:id="@+id/home"
+            android:icon="@drawable/home"
+            android:title="Home" />
+
+        <item
             android:id="@+id/events_list"
             android:icon="@drawable/events"
             android:title="Events List" />
@@ -40,10 +45,6 @@
         android:icon="@drawable/feedback"
         android:title="Provide Feedback" />
 
-    <item
-        android:id="@+id/about"
-        android:icon="@drawable/account"
-        android:title="About Dev" />
 
 </group>
 
