--- a/app/src/main/res/layout/event_coordinator_fragment.xml
+++ b/app/src/main/res/layout/event_coordinator_fragment.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@drawable/b1"
+    >
 
-    <TextView
+    <pttextview.widget.PTTextView
+        android:id="@+id/ggText"
+        android:padding="6dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:text="COORDINATOR TEAM 2016"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        app:typeface="pt_serif_bold_italic"/>
+
+    <ListView
+        android:padding="5dp"
+        android:layout_below="@+id/ggText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Event Coordinator Fragment"
-        android:id="@+id/textView4"
-        android:layout_centerVertical="true"
+        android:id="@+id/coordinator_list"
         android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
