--- a/app/src/main/res/layout/events_list_fragment.xml
+++ b/app/src/main/res/layout/events_list_fragment.xml
@@ -1,31 +1,249 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-
+    android:background="@drawable/b4"
     >
 
     <pttextview.widget.PTTextView
         android:id="@+id/ccText"
-        android:padding="12dp"
-        android:layout_marginTop="40dp"
+        android:padding="6dp"
+        android:textStyle="bold"
+        android:textColor="#000000"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="30dp"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
-        android:text="EVENTS LIST - UTOPIA 2016"
-        android:textColor="@color/colorPrimaryDark"
-        android:layout_height="wrap_content"
+        android:textSize="20sp"
         app:textWeight="bold"
+        android:text="EVENTS LIST - UTOPIA 2016"
+        android:layout_height="wrap_content"
         app:typeface="pt_serif_bold_italic"/>
 
 
+    <ProgressBar
+        android:layout_centerInParent="true"
+        android:id="@+id/progressbar"
+        android:visibility="gone"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
+
+    <pttextview.widget.PTTextView
+        android:textStyle="bold"
+        android:id="@+id/day1"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 1"
+        android:layout_below="@id/ccText"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
 
     <ListView
-        android:layout_below="@+id/ccText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/all_events_list"
+        android:layout_below="@+id/day1"
+        android:id="@+id/all_events_list1"
+        android:layout_centerHorizontal="true" />
+
+
+
+    <pttextview.widget.PTTextView
+        android:textStyle="bold"
+        android:id="@+id/day2"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 2"
+        android:layout_below="@id/all_events_list1"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/day2"
+        android:id="@+id/all_events_list2"
+        android:layout_centerHorizontal="true" />
+
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day3"
+        android:layout_below="@id/all_events_list2"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 3"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list3"
+        android:layout_below="@+id/day3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day4"
+        android:layout_below="@id/all_events_list3"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 4"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list4"
+        android:layout_below="@+id/day4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day5"
+        android:layout_below="@id/all_events_list4"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 5"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list5"
+        android:layout_below="@+id/day5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day6"
+        android:layout_below="@id/all_events_list5"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 6"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list6"
+        android:layout_below="@+id/day6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day7"
+        android:layout_below="@id/all_events_list6"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 7"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list7"
+        android:layout_below="@+id/day7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day8"
+        android:layout_below="@id/all_events_list7"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 8"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list8"
+        android:layout_below="@+id/day8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day9"
+        android:layout_below="@id/all_events_list8"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 9"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list9"
+        android:layout_below="@+id/day9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true" />
+
+    <pttextview.widget.PTTextView
+        android:id="@+id/day10"
+        android:layout_below="@id/all_events_list9"
+        android:textStyle="bold"
+        android:textSize="15sp"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:text="DAY 10"
+        android:layout_centerHorizontal="true"
+        android:layout_height="wrap_content"
+        app:textWeight="bold"
+        />
+
+    <ListView
+        android:id="@+id/all_events_list10"
+        android:layout_below="@+id/day10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
