--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="Rules and Regulations"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/about_dev"
+        android:orderInCategory="100"
+        android:title="About Dev"
+        app:showAsAction="never" />
 </menu>
