Rules and Regulations Activity added

--- a/app/src/main/res/layout/events_list_fragment.xml
+++ b/app/src/main/res/layout/events_list_fragment.xml
@@ -29,221 +29,14 @@
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
-    <pttextview.widget.PTTextView
-        android:textStyle="bold"
-        android:id="@+id/day1"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 1"
-        android:layout_below="@id/ccText"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
+
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/day1"
+        android:layout_below="@+id/ccText"
         android:id="@+id/all_events_list1"
         android:layout_centerHorizontal="true" />
 
-
-
-    <pttextview.widget.PTTextView
-        android:textStyle="bold"
-        android:id="@+id/day2"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 2"
-        android:layout_below="@id/all_events_list1"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/day2"
-        android:id="@+id/all_events_list2"
-        android:layout_centerHorizontal="true" />
-
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day3"
-        android:layout_below="@id/all_events_list2"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 3"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list3"
-        android:layout_below="@+id/day3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day4"
-        android:layout_below="@id/all_events_list3"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 4"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list4"
-        android:layout_below="@+id/day4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day5"
-        android:layout_below="@id/all_events_list4"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 5"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list5"
-        android:layout_below="@+id/day5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day6"
-        android:layout_below="@id/all_events_list5"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 6"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list6"
-        android:layout_below="@+id/day6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day7"
-        android:layout_below="@id/all_events_list6"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 7"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list7"
-        android:layout_below="@+id/day7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day8"
-        android:layout_below="@id/all_events_list7"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 8"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list8"
-        android:layout_below="@+id/day8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day9"
-        android:layout_below="@id/all_events_list8"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 9"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list9"
-        android:layout_below="@+id/day9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
-
-    <pttextview.widget.PTTextView
-        android:id="@+id/day10"
-        android:layout_below="@id/all_events_list9"
-        android:textStyle="bold"
-        android:textSize="15sp"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="wrap_content"
-        android:text="DAY 10"
-        android:layout_centerHorizontal="true"
-        android:layout_height="wrap_content"
-        app:textWeight="bold"
-        />
-
-    <ListView
-        android:id="@+id/all_events_list10"
-        android:layout_below="@+id/day10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
