--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.justmailtoavi.avinashk.utopia.about_dev">
+    tools:context="com.justmailtoavi.avinashk.utopia.rules">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,15 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_rules" />
+
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fabd"
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/home" />
-
-    <include layout="@layout/content_about_dev" />
-
 
 </android.support.design.widget.CoordinatorLayout>
