--- a/app/src/main/res/layout/activity_teams_info.xml
+++ b/app/src/main/res/layout/activity_teams_info.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="#dcedc8"
     tools:context="com.justmailtoavi.avinashk.utopia.teams_info">
 
     <android.support.design.widget.AppBarLayout
@@ -21,6 +20,14 @@
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/home" />
 
     <include layout="@layout/content_teams_info" />
 
