--- a/app/src/main/res/layout/content_about_dev.xml
+++ b/app/src/main/res/layout/content_about_dev.xml
@@ -61,6 +61,7 @@
         android:padding="12dp"
         android:layout_below="@+id/l1"
         android:id="@+id/mail"
+        android:onClick="dev_click"
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
@@ -71,6 +72,7 @@
         />
     <pttextview.widget.PTTextView
         android:padding="12dp"
+        android:onClick="dev_click"
         android:layout_below="@+id/mail"
         android:id="@+id/phone"
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -83,8 +85,22 @@
         />
 
 
-    <TextView
+    <pttextview.widget.PTTextView
+        android:padding="12dp"
         android:layout_below="@+id/phone"
+        android:onClick="dev_click"
+        android:id="@+id/git"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="wrap_content"
+        android:textSize="12sp"
+        android:text="Github :   https://github.com/avinashart/Utopia.git"
+        android:textColor="#212121"
+        android:layout_height="wrap_content"
+        />
+
+    <TextView
+        android:layout_below="@+id/git"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#000000"
@@ -106,7 +122,12 @@
         android:orientation="vertical"
         android:layout_height="wrap_content">
 
-
+        <TextView
+            android:paddingTop="20dp"
+            android:layout_width="wrap_content"
+            android:text="Rishab Tripati 6th Semester ECE Dept"
+            android:layout_height="wrap_content" />
+        
         <TextView
             android:paddingTop="20dp"
             android:layout_width="wrap_content"
@@ -118,7 +139,6 @@
             android:layout_width="wrap_content"
             android:text="Abhishek SK   4th Semester ECE Dept"
             android:layout_height="wrap_content" />
-
 
     </LinearLayout>
 
