--- a/app/src/main/res/layout/content_t_shirt.xml
+++ b/app/src/main/res/layout/content_t_shirt.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/b3"
-    >
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.justmailtoavi.avinashk.utopia.t_shirt"
+    tools:showIn="@layout/activity_t_shirt">
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_above="@+id/slider"
+        android:layout_above="@+id/slide2"
         android:background="@color/colorPrimaryDark"
         />
     <com.daimajia.slider.library.SliderLayout
-        android:id="@+id/slider"
+        android:id="@+id/slide2"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:background="#7cb342"
@@ -20,9 +26,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_below="@+id/slider"
+        android:layout_below="@+id/slide2"
         android:background="@color/colorPrimaryDark"
         />
-
 
 </RelativeLayout>
