--- a/app/src/main/res/layout/core_team_fragment_item.xml
+++ b/app/src/main/res/layout/core_team_fragment_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
       <LinearLayout
           android:layout_width="match_parent"
@@ -31,6 +32,18 @@
               android:text="Number"
               android:id="@+id/core_number_item"
               />
+
+
       </LinearLayout>
 
+
+    <com.mikhaellopez.circularimageview.CircularImageView
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        app:civ_border_color="#8b8686"
+        app:civ_border_width="4dp"
+        app:civ_shadow="true"
+        app:civ_shadow_radius="10"
+        app:civ_shadow_color="#aeea00"/>
+    
 </RelativeLayout>
